# scripts

./: pyproject.toml
database/: csv2parquet.py
feed_publish_scripts/: publish_feed.py
plots/: feed_activity.ipynb
