[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astronomy-feeds",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
]

[tool.uv.sources]
astronomy-feeds = { git = "https://github.com/bluesky-astronomy/astronomy-feeds.git" }
